<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tap &amp; Trade TCG</string>
    <string name="card_image">Card Image</string>
    <string name="pack_image">Pack image</string>
    <string name="open_pack_string">Tap to open a pack!</string>
    <string name="req_player_name">Tell me your username!</string>
    <string name="username_text">Username</string>
    <string name="save_text">Save</string>
    <string name="inv_item_count_text">x1</string>
    <string name="loading_text">Loading…</string>
    <string name="pack_count_num">0</string>
    <string name="tap_this_image">Tap this image</string>
    <string name="tap_count_num">Taps: 0</string>
    <string name="inventory_menu">Inventory</string>
    <string name="open_pack_menu">Open pack</string>
    <string name="big_button_menu">Clicker</string>
    <string name="trade_menu">Trade</string>
    <string name="card_name_dialog_card">Card Name</string>
    <string name="pack_reminder_text">You got your 4 packs! Open it quick!</string>
    <string name="trade_card_title">Trade this card?</string>
    <string name="trade_card_yes">Yes</string>
    <string name="trade_card_no">No</string>
    <string name="select_player_to_trade_with">Select a player to trade with</string>
    <string name="trade_request">Trade request</string>
    <string name="trade_with_player">Do you want to trade with %1$s</string>
    <string name="card_sent_to_trade">Card sent for trade!</string>
    <string name="received_card">Received card #%1$d!</string>
    <string name="searching_for_players">Searching for nearby players…</string>
    <string name="ondisconnect">Trade was successful!</string>

    <string name="tutorial_desc">
    In this game, you can open packs, collect cards, and trade with other players.
    To get started, tap the pack image to open your first pack.
    You can get 1 free pack every 6 hours.
    You can also earn packs in the clicker game — every 100 taps gives you one pack to help grow your collection.
    </string>
    <string name="tutorial_title">Welcome to Tap &amp; Trade TCG!</string>
    <string name="tutorial_okay">Got it!</string>
    <string name="no_packs_title">No Packs</string>
    <string name="no_packs_message">You have no packs to open.</string>
    <string name="card_opened_title">You got a card!</string>
    <string name="card_opened_button">Next</string>
    <string name="tapcounter_text">"Taps: %1$s"</string>
    <string name="card_name_placeholder">card name placeholder</string>
    <string name="card_rarity_placeholder">card rarity placeholder</string>
    <string name="card_name">Name: %1$s</string>
    <string name="card_rarity">Rarity: %1$s</string>
    <string name="permission_required">Permissions required</string>
    <string name="permission_rationale">Some features will be limited without the requested permissions. You can enable them in Settings.</string>
    <string name="open_settings">Open Settings</string>
</resources>