<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/req_player_name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/username_text" />

    <Button
        android:id="@+id/btnSaveUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_text" />

</LinearLayout>
