<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tapFragment"
    android:background="@color/background_gray">

    <ImageView
        android:id="@+id/tapImage"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:src="@drawable/packs"
        android:contentDescription="@string/tap_this_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tapCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tap_count_num"
        android:textSize="30sp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tapImage" />

</androidx.constraintlayout.widget.ConstraintLayout>